fix: relation logs
